Fixed background scale to fit correctly
Background is no longer stretched, and is sized to fit the exact x-axis of the user's window.

--- a/style.css
+++ b/style.css
@@ -8,12 +8,16 @@
   src: url('fonts/Inter-VariableFont_slnt,wght.ttf') format('truetype'); /* Path to the .ttf file */
 }
 
+h1 {
+  margin-top: 5000px;
+}
+
 body {
     min-height: 100vh;
     background-image: url(../images/sky_island_background.jpg);
-    background-size: cover;
+    background-size: fill;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: top;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
@@ -36,6 +40,7 @@ nav ul {
   width: 100%;
   list-style: none;
   display: flex;
+  top: 0;
   justify-content: flex-end;
   align-items: center;
 }
